--- a/css/news.css
+++ b/css/news.css
@@ -105,7 +105,7 @@
   line-height: 18px;
   margin: 0 0 30px 0;
   font-weight: 500;
-  text-align: center;
+  text-align: right;
 }
 .news-detail .rich-text {
   font-size: 16px;
