--- a/less/styles.less
+++ b/less/styles.less
@@ -1,12 +1,12 @@
 .navbar-default{
   background: #fff;
-  height: 60px;
   box-shadow: 0px 1px 9px 0px rgba(203,208,228,0.2);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   border: none;
+  z-index: 999;
   .navbar-collapse{
     a{
       text-decoration: none;
@@ -27,10 +27,43 @@
   }
   .language{
     position: relative;
+    height: 60px;
+    display: flex;
+    align-items: center;
     ul{
       position: absolute;
-      top: 60px;
+      top: 68px;
       left: 0;
+      z-index: 100;
+      width: 124px;
+      background: rgba(255,255,255,.4);
+      display: none;
+      li{
+        height: 40px;
+        display: flex;
+        align-items: center;
+        padding-left: 15px;
+        a{
+          color: #fff;
+        }
+        img{
+          width: 20px;
+          height: 14px;
+          margin-right: 15px;
+        }
+      }
+      li:hover{
+        background: #1B76FF;
+        a{
+          background: transparent;
+          color: #fff;
+        }
+      }
     }
   }
+  //.language:hover{
+  //  ul{
+  //    height: auto;
+  //  }
+  //}
 }
