--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,6 @@
     bottom: 50px;
     left: 50%;
     z-index: 15;
-    width: 1170px;
     padding-left: 0;
     margin-left: -585px;
     text-align: right;
@@ -182,15 +181,12 @@
     display:flex;
     -webkit-align-items:center;
     align-items:center;
-
-    width: 1170px;
     margin: 0 auto;
     /*background-color: #f1f1f1;*/
 }
 .advantage h2,.target h2{
-    height:48px;
     line-height:48px;
-    margin:0 0 24px 0;
+    margin:50px 0 24px 0;
     font-size:34px;
     font-family:PingFangSC-Regular;
     color:rgba(76,81,85,1);
@@ -201,25 +197,11 @@
     color:rgba(140,140,140,1);
     line-height:28px;
 }
-.advantage{
-    height: 420px;
+.advantage img{
+    max-width: 100%;
 }
-.advantage .img{
-    width:550px;
-}
-.advantage .des{
-    width:500px;
-    margin-left: 120px;
-}
-.target{
-    height: 479px;
-}
-.target .des{
-    width:500px;
-    margin-right: 114px;
-}
-.target .img{
-    width:551px;
+.target .img img{
+    max-width:100%;
 }
 
 
@@ -229,7 +211,6 @@
     background: #fdfdfd url("../images/bg_choose@2x.png") no-repeat bottom center;
 }
 .whyUs{
-    width: 1170px;
     margin: 0 auto;
     padding-top: 60px;
     padding-bottom: 100px;
@@ -243,15 +224,11 @@
     color:rgba(76,81,85,1);
 }
 .whyUs .list{
-    margin-left: -15px;
-    margin-right: -15px;
     overflow: hidden;
+    text-align: center;
 }
-.whyUs .item{
-    float: left;
-    width: 270px;
-    margin-left: 15px;
-    margin-right: 15px;
+.whyUs .item div img{
+    max-width: 100%;
 }
 .whyUs p{
     font-size:18px;
@@ -274,31 +251,16 @@
     background: url("../images/bg_team@2x.png") no-repeat top center;
 }
 .member{
-    width: 1170px;
     margin: 0 auto;
     padding-top: 60px;
     padding-bottom: 60px;
     text-align: center;
     overflow: hidden;
 }
-.member .list{
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between;
-    background: url("../images/divide.png") no-repeat;
-    overflow: hidden;
-
-}
 .member .list2{
-    padding:0 125px;
-    display: flex;
-    flex-direction: row;
-    justify-content:space-around;
     background: none;
 }
 .member .item{
-    float: left;
-    width: 370px;
     /*height: 510px;*/
     /*margin: 0 15px;*/
     padding:70px 35px 38px;
@@ -338,7 +300,6 @@
     margin: 10px 0 30px;
 }
 .member h4{
-    height:34px;
     line-height:35px;
     margin: 40px 0 20px;
     font-size:30px;
@@ -346,7 +307,6 @@
     color:rgba(76,81,85,1);
 }
 .member .job{
-    height:25px;
     font-size:22px;
     font-family:Ubuntu;
     color:rgba(50,145,255,1);
@@ -368,7 +328,6 @@
 }
 
 .support{
-    width: 1170px;
     margin: 0 auto;
     padding-top: 60px;
     text-align: center;
@@ -383,7 +342,6 @@
     display: none;
 }
 .sliderDesc1{
-    height:22px;
     line-height:22px;
     margin: 55px auto 30px;
     font-size:16px;
@@ -400,11 +358,12 @@
 
 #carousel-example-generic .carousel-inner{
     max-width: 1920px;
+    width: 100%;
     height: 680px;
     margin: 0 auto;
 }
 #carousel-example-generic .carousel-inner .item{
-    width: 1920px;
+    width: 100%;
     height: 680px;
     position: absolute;
     left: 50%;
@@ -418,9 +377,6 @@
     background: #fdfdfd url("../images/bg_qiyezhichi@2x.png") no-repeat center;
 }
 .partner{
-    width: 1200px;
-    height: 700px;
-    margin: 0 auto;
     padding-top: 60px;
     text-align: center;
     overflow: hidden;
@@ -428,45 +384,27 @@
 .partner .list{
     margin-top: 65px;
     overflow: hidden;
-    background: url("../images/border.png") no-repeat top center;
+    /*background: url("../images/border.png") no-repeat top center;*/
 }
-.partner .item{
-    float: left;
-    width: 370px;
-    height: 140px;
-    margin: 16px 15px;
+.partner .item img{
+    max-width: 100%;
+    margin: 15px 0;
 }
 
 /*新闻中心*/
 .news{
-    width: 1170px;
-    margin: 0 auto;
     padding-top: 60px;
     text-align: center;
 }
 .news .list{
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between;
     padding: 50px 0 78px;
     overflow: hidden;
 }
 .news .list .item{
-    width: 570px;
-    height: 200px;
     padding-top: 36px;
     display: flex;
     flex-direction: row;
     position: relative;
-}
-.news .list .item:after{
-    content: "";
-    width: 1px;
-    height: 160px;
-    background-color: rgba(0,0,0,0.083);;
-    position: absolute;
-    right: -1px;
-    top:20px;
 }
 .news .item .left{
     width: 90px;
@@ -487,9 +425,8 @@
     line-height:13px;
 }
 .news .item .right{
-    width: 680px;
+    /*width: 680px;*/
     padding-left: 40px;
-    padding-right: 50px;
     text-align: right;
 }
 .news .item .right .name{
