--- a/less/styles.less
+++ b/less/styles.less
@@ -1,3 +1,6 @@
+article{
+  display: none;
+}
 .navbar-default{
   background: #fff;
   box-shadow: 0px 1px 9px 0px rgba(203,208,228,0.2);
@@ -7,12 +10,16 @@
   width: 100%;
   border: none;
   z-index: 999;
+  .navbar-collapse.in{
+    overflow-y: visible;
+  }
   .navbar-collapse{
     a{
       text-decoration: none;
       line-height: 30px;
       color: #BBC1D3;
       font-size:14px;
+      padding: 15px 12px;
     }
     a:hover{
       color: #73799c;
@@ -30,12 +37,13 @@
     height: 60px;
     display: flex;
     align-items: center;
+    padding-left: 12px;
     ul{
       position: absolute;
       top: 68px;
       left: 0;
       z-index: 100;
-      width: 124px;
+      width: 132px;
       background: rgba(255,255,255,.4);
       display: none;
       li{
@@ -43,6 +51,7 @@
         display: flex;
         align-items: center;
         padding-left: 15px;
+        background: rgba(27,118,255,0.6);
         a{
           color: #fff;
         }
