--- a/less/news.less
+++ b/less/news.less
@@ -1,46 +1,7 @@
 .news{
   padding-top: 64px;
-  .title{
-    text-align: center;
-  }
-  .title h3{
-    height:48px;
-    line-height:48px;
-    font-size:34px;
-    font-family:PingFangSC-Regular;
-    color:rgba(76,81,85,1);
-    margin: 0 auto;
-    font-weight: normal;
-  }
-  .title h3:before{
-    vertical-align: 20%;
-    display: inline-block;
-    content: '';
-    width:100px;
-    height:1px;
-    margin-right: 20px;
-    background:rgba(216,216,216,1);
-  }
-  .title h3:after{
-    vertical-align: 20%;
-    display: inline-block;
-    content: '';
-    width:100px;
-    height:1px;
-    margin-left: 20px;
-    background:rgba(216,216,216,1);
-  }
-  .title .sec-title{
-    height:25px;
-    line-height:26px;
-    font-size:22px;
-    font-family:Ubuntu;
-    color:rgba(197,199,203,1);
-    margin: 10px 0 14px;
-  }
+  padding-bottom: 50px;
   .news-list{
-    width: 970px;
-    margin: 0 auto 50px auto;
     li{
       padding: 50px 0 40px 0;
       border-bottom: 1px solid #EDEDED;
@@ -86,8 +47,8 @@
   }
 }
 .news-detail{
-  width: 970px;
-  margin: 80px auto;
+  margin-bottom: 80px;
+  margin-top: 80px;
   h5{
     text-align: center;
     font-size:24px;
