--- a/less/styles.less
+++ b/less/styles.less
@@ -1,6 +1,12 @@
 article{
   display: none;
 }
+.navbar-default .navbar-nav>li>a, .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover{
+  color: #BBC1D3;
+}
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover{
+  background-color: #fff;
+}
 .navbar-default{
   background: #fff;
   box-shadow: 0px 1px 9px 0px rgba(203,208,228,0.2);
@@ -17,7 +23,6 @@ article{
     a{
       text-decoration: none;
       line-height: 30px;
-      color: #BBC1D3;
       font-size:14px;
       padding: 15px 12px;
     }
@@ -70,9 +75,4 @@ article{
       }
     }
   }
-  //.language:hover{
-  //  ul{
-  //    height: auto;
-  //  }
-  //}
 }
