--- a/css/news.css
+++ b/css/news.css
@@ -1,47 +1,6 @@
 .news {
   padding-top: 64px;
-}
-.news .title {
-  text-align: center;
-}
-.news .title h3 {
-  height: 48px;
-  line-height: 48px;
-  font-size: 34px;
-  font-family: PingFangSC-Regular;
-  color: #4c5155;
-  margin: 0 auto;
-  font-weight: normal;
-}
-.news .title h3:before {
-  vertical-align: 20%;
-  display: inline-block;
-  content: '';
-  width: 100px;
-  height: 1px;
-  margin-right: 20px;
-  background: #d8d8d8;
-}
-.news .title h3:after {
-  vertical-align: 20%;
-  display: inline-block;
-  content: '';
-  width: 100px;
-  height: 1px;
-  margin-left: 20px;
-  background: #d8d8d8;
-}
-.news .title .sec-title {
-  height: 25px;
-  line-height: 26px;
-  font-size: 22px;
-  font-family: Ubuntu;
-  color: #c5c7cb;
-  margin: 10px 0 14px;
-}
-.news .news-list {
-  width: 970px;
-  margin: 0 auto 50px auto;
+  padding-bottom: 50px;
 }
 .news .news-list li {
   padding: 50px 0 40px 0;
@@ -86,8 +45,8 @@
   margin: 0 0 50px 0;
 }
 .news-detail {
-  width: 970px;
-  margin: 80px auto;
+  margin-bottom: 80px;
+  margin-top: 80px;
 }
 .news-detail h5 {
   text-align: center;
