--- a/less/media.less
+++ b/less/media.less
@@ -29,6 +29,15 @@
   .timeAxis-sm{
     display: block;
   }
+  .originBlock .case .list{
+    padding-left: 50px;
+  }
+  .originBlock .case .item:before{
+    left: -30px;
+  }
+  .originBlock .case .list .name:before{
+    left: -43px;
+  }
 }
 //中等屏幕（桌面显示器，小于等于 992px）
 @media all and (min-width: 767px) and (max-width: 992px) {
