--- a/css/style.css
+++ b/css/style.css
@@ -1,83 +1,182 @@
-/*body{*/
-    /*font-family:'PingFangSC-Regular','微软雅黑';*/
-/*}*/
-/*.navBar{*/
-    /*position: absolute;*/
-    /*top:0;*/
-    /*left:50%;*/
-    /*width: 1170px;*/
-    /*height: 60px;*/
-    /*margin-left: -585px;*/
-    /*z-index: 100;*/
-/*}*/
-/*.navBar .logo{*/
-    /*float: left;*/
-    /*line-height: 60px;*/
-/*}*/
-/*.navBar .navigation{*/
-    /*float: right;*/
-/*}*/
-/*.navBar .navigation li{*/
-    /*float: left;*/
-    /*height: 60px;*/
-    /*line-height: 60px;*/
-/*}*/
-/*.navBar .navigation li{*/
-    /*height: 60px;*/
-    /*line-height: 60px;*/
-    /*padding:0 16px;*/
-/*}*/
-/*.navBar .navigation li a{*/
-    /*display: inline-block;*/
-    /*color:rgba(187,193,211,1);*/
-    /*font-size:14px;*/
-    /*text-decoration: none;*/
-/*}*/
-/*.navBar .navigation li img{*/
-    /*display: inline-block;*/
-    /*margin: 0 13px;*/
-/*}*/
-/*.navBar .navigation li a:hover{*/
-    /*color: #1B76FF;*/
-    /*text-decoration: none;*/
-    /*background-color: transparent;*/
-/*}*/
-/*.navBar .navigation li a:link{*/
-    /*text-decoration: none;*/
-/*}*/
+/* reset */
 
-/*.navBar .navigation li.language{*/
-    /*width: 121px;*/
-    /*padding:0 5px;*/
-/*}*/
-/*.navBar .navigation li.language ul{*/
-    /*display: none;*/
-    /*overflow: hidden;*/
-/*}*/
-/*.navBar .navigation li.language li{*/
-    /*width: 100%;*/
-    /*height: 40px;*/
-    /*line-height: 40px;*/
-    /*padding:0px;*/
-/*}*/
-/*.navBar .navigation li.language li a{*/
-    /*color: white;*/
-/*}*/
-/*.navBar .navigation li.language li a:hover{*/
-    /*text-decoration: none;*/
-/*}*/
-/*.navBar .navigation li.language .zh{*/
-    /*margin-top: 10px;*/
-/*}*/
-/*.navBar .navigation li.language li{*/
-    /*background-color: rgba(255,255,255,0.4);*/
-/*}*/
-/*.navBar .navigation li.language .active{*/
-    /*background:rgba(27,118,255,1);*/
-/*}*/
-/*banner*/
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+p,
+blockquote,
+pre,
+hr,
+figure,
+table,
+caption,
+th,
+td,
+form,
+fieldset,
+legend,
+input,
+button,
+textarea,
+menu {
+    margin: 0;
+    padding: 0;
+}
 
+header,
+footer,
+section,
+article,
+aside,
+nav,
+hgroup,
+address,
+figure,
+figcaption,
+menu,
+details {
+    display: block;
+}
 
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+caption,
+th {
+    text-align: left;
+    font-weight: normal;
+}
+
+html,
+body,
+fieldset,
+img,
+iframe,
+abbr {
+    border: 0;
+}
+
+i,
+cite,
+em,
+var,
+address,
+dfn {
+    font-style: normal;
+}
+
+[hidefocus],
+summary {
+    outline: 0;
+}
+
+li {
+    list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+small {
+    font-size: 100%;
+}
+
+sup,
+sub {
+    font-size: 83%;
+}
+
+pre,
+code,
+kbd,
+samp {
+    font-family: inherit;
+}
+
+q:before,
+q:after {
+    content: none;
+}
+
+textarea {
+    overflow: auto;
+    resize: none;
+}
+
+label,
+summary {
+    cursor: default;
+}
+
+a,
+button {
+    cursor: pointer;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+em,
+strong,
+b {
+    font-weight: bold;
+}
+
+del,
+ins,
+u,
+s,
+a,
+a:hover {
+    text-decoration: none;
+}
+
+body,
+textarea,
+input,
+button,
+select,
+keygen,
+legend {
+    font: 12px/1.14 arial, \5b8b\4f53;
+    color: #333;
+    outline: 0;
+}
+
+body {
+    background: #fff;
+}
+
+a,
+a:hover {
+    color: #333;
+}
+*{
+    box-sizing: border-box;
+}
+.head-top{
+    padding-top: 50px;
+}
 /*控制banner图小按钮样式设置*/
 .carousel-indicators {
     position: absolute;
@@ -394,7 +493,6 @@
 /*新闻中心*/
 .news{
     padding-top: 60px;
-    text-align: center;
 }
 .news .list{
     padding: 50px 0 78px;
@@ -474,4 +572,695 @@
     cursor: pointer;
     z-index: 9999;
     display: none;
+}
+
+.slide-3d{
+    height: 190px;
+    margin: 62px auto 0;
+}
+.slide-3d .desc {
+    display: block;
+}
+
+.slide-3d .item-list{
+    width: 390px;
+    margin: 0 auto;
+}
+.slide-3d .item-list li {
+    width: 190px;
+    height: 190px;
+    border: 5px solid #fff;
+    border-radius: 50%;
+    overflow: hidden;
+    transition: all 0.5s ease-out;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.slide-3d .item-list li.item0 {
+    transform: translate3d(-100px, 0, 0) scale(0.67);
+}
+.slide-3d .item-list li.item1 {
+    transform: translate3d(0, 0, 0) scale(0.67);
+    transform-origin: 0 50%;
+    opacity: 1;
+    z-index: 2;
+}
+.slide-3d .item-list li.item2 {
+    transform: translate3d(100px, 0, 0) scale(1);
+    transform-origin: 0 50%;
+    opacity: 1;
+    z-index: 3;
+}
+.slide-3d .item-list li.item3 {
+    transform: translate3d(200px, 0, 0) scale(0.67);
+    transform-origin: 100% 50%;
+    opacity: 1;
+    z-index: 2;
+}
+.slide-3d .item-list li.item4 {
+    transform: translate3d(300px, 0, 0) scale(0.67);
+}
+.slide-3d .item-list li.item5 {
+    transform: translate3d(400px, 0, 0) scale(0.67);
+}
+.slide-3d .item-list li.item6 {
+    transform: translate3d(500px, 0, 0) scale(0.67);
+}
+.slide-3d .item-list li.item7 {
+    transform: translate3d(600px, 0, 0) scale(0.67);
+}
+.slide-3d .item-list li.item8 {
+    transform: translate3d(700px, 0, 0) scale(0.67);
+}
+.slide-3d .item-list li.item9 {
+    transform: translate3d(800px, 0, 0) scale(0.67);
+}
+.slide-3d .desc {
+    height: 200px;
+    width: 100%;
+    position: absolute;
+    bottom: -200px;
+    left: 0;
+    z-index: 99;
+}
+
+.slide-3d .controls a {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    background:rgba(56,54,61,1);
+    border-radius: 25px;
+    color: #9c9b9f;
+    font-size: 20px;
+    padding-top: 0;
+}
+.slide-3d .controls a:hover{
+    color: #ffffff;
+    /*background:rgba(56,54,61,1);*/
+}
+.slide-3d .controls .item-prev {
+    margin-top: -25px;
+}
+
+body{
+    font-family:'PingFangSC-Regular','微软雅黑';
+}
+.solutionBlock{
+    padding-top: 96px;
+}
+.title{
+    margin-bottom: 70px;
+    text-align: center;
+}
+.title h3{
+    height:48px;
+    line-height:48px;
+    font-size:34px;
+    font-family:PingFangSC-Regular;
+    color:rgba(76,81,85,1);
+    margin: 0 auto;
+    font-weight: normal;
+}
+.title h3:before{
+    vertical-align: 20%;
+    display: inline-block;
+    content: '';
+    width:100px;
+    height:1px;
+    margin-right: 20px;
+    background:rgba(216,216,216,1);
+}
+.title h3:after{
+    vertical-align: 20%;
+    display: inline-block;
+    content: '';
+    width:100px;
+    height:1px;
+    margin-left: 20px;
+    background:rgba(216,216,216,1);
+}
+.title .sec-title{
+    height:25px;
+    line-height:26px;
+    font-size:22px;
+    font-family:Ubuntu;
+    color:rgba(197,199,203,1);
+    margin: 10px 0 30px;
+}
+
+.solutionBlock .info{
+    overflow: hidden;
+}
+.solutionBlock .info p{
+    margin-bottom: 50px;
+    font-size:16px;
+    font-family:PingFangSC-Regular;
+    color:rgba(140,140,140,1);
+    line-height:30px;
+}
+.solutionBlock .info img{
+    max-width: 100%;
+    display: block;
+    margin: 0 auto 35px;
+}
+
+
+.case-box{
+    padding-top: 50px;
+    padding-bottom: 256px;
+}
+.case-box .title{
+    margin-bottom: 96px;
+    text-align: center;
+}
+
+.case-box .item{
+    position: relative;
+    height: 300px;
+    max-width: 300px;
+    width: 100%;
+    margin: 0 auto 30px auto;
+    text-align: center;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.case-box .item1{
+    background-image: url("../images/pic_case1@2x.png");
+}
+.case-box .item2{
+    background-image: url("../images/pic_case2@2x.png");
+}
+.case-box .item3{
+    background-image: url("../images/pic_case3@2x.png");
+}
+.case-box .item .hover{
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.7);
+    display: none;
+}
+.case-box .item p{
+    height:33px;
+    font-size:24px;
+    font-family:PingFangSC-Regular;
+    color:rgba(255,255,255,1);
+    line-height:33px;
+    margin-top: 99px;
+    margin-bottom: 30px;
+}
+.case-box .item a{
+    display: inline-block;
+    width:120px;
+    height:40px;
+    line-height:40px;
+    font-size:16px;
+    font-family:PingFangSC-Regular;
+    color:rgba(255,255,255,1);
+    background:rgba(27,118,255,1);
+    text-align: center;
+}
+/*.case-box .item:hover .hover{*/
+/*display: block;*/
+/*}*/
+
+
+.clearfix:after {
+    content: '';
+    display: block;
+    height: 0;
+    font-size: 0;
+    visibility: hidden;
+    clear: both;
+}
+
+/*时间轴样式*/
+.timeAxis{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 200px;
+}
+.timeAxis .divide{
+    width:2px;
+    margin-top: 40px;
+    background:linear-gradient(180deg,rgba(151,216,255,1),rgba(50,145,255,1));
+}
+.timeAxis .date{
+    height:74px;
+    font-size:30px;
+    font-family:Ubuntu;
+    color:rgba(76,81,85,1);
+    line-height:74px;
+    margin-bottom: 120px;
+    position: relative;
+}
+.timeAxis .event{
+    height:74px;
+    font-size:24px;
+    font-family:PingFangSC-Regular;
+    color:rgba(115,121,156,1);
+    line-height:74px;
+    margin-bottom: 120px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.timeAxis .event span{
+    font-size:24px;
+    font-family:PingFangSC-Regular;
+    color:rgba(115,121,156,1);
+    line-height:33px;
+    margin: 0 30px 0 20px;
+}
+.timeAxis .line{
+    width:80px;
+    height:1px;
+    background:rgba(216,216,216,1);
+}
+.timeAxis .left{
+    width: 50%;
+    text-align: right;
+}
+
+.timeAxis .left .date{
+    padding-right: 60px;
+}
+.timeAxis .left .date:after{
+    position: absolute;
+    top:27px;
+    right: -11px;
+    content: '';
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background:linear-gradient(90deg,rgba(97,196,255,1),rgba(50,145,255,1));
+}
+
+.timeAxis .right{
+    width: 50%;
+}
+.timeAxis .right .date{
+    padding-left: 60px;
+}
+.timeAxis .right .date:after{
+    position: absolute;
+    top:27px;
+    left: -11px;
+    content: '';
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background:linear-gradient(90deg,rgba(97,196,255,1),rgba(50,145,255,1));
+}
+
+.timeAxis .left .event{
+    justify-content: flex-end;
+}
+.timeAxis .right .event{
+    justify-content: flex-start;
+}
+.timeAxis-sm{
+    padding-top: 30px;
+    padding-bottom: 200px;
+    display: none;
+}
+.timeAxis-sm li{
+    text-align: center;
+}
+.timeAxis-sm li .date{
+    font-size: 28px;
+    font-family: Ubuntu;
+    color: rgba(76,81,85,1);
+    line-height: 54px;
+}
+.timeAxis-sm li .event{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 30px;
+}
+.timeAxis-sm li .event span{
+    font-size: 24px;
+    font-family: PingFangSC-Regular;
+    color: rgba(115,121,156,1);
+    line-height: 33px;
+    vertical-align: middle;
+    margin-left: 30px;
+}
+.timeAxis-sm li .event img{
+    vertical-align: middle;
+}
+
+
+.originBlock .desc{
+    padding: 64px 0 40px;
+    border-bottom: 1px solid rgba(0,0,0,0.08);
+}
+.originBlock .desc img{
+    max-width: 100%;
+}
+.originBlock .desc .title{
+    /*height:45px;*/
+    line-height:45px;
+    font-size:32px;
+    font-family:PingFangSC-Medium;
+    color:rgba(76,81,85,1);
+}
+.originBlock .desc p{
+    font-size:16px;
+    line-height:28px;
+    font-family:PingFangSC-Regular;
+    color:rgba(140,140,140,1);
+    margin: 20px auto 15px;
+}
+
+
+.originBlock .case{
+    padding: 64px 0 200px;
+}
+.originBlock .case img{
+    max-width: 100%;
+}
+.originBlock .case .title{
+    height:45px;
+    line-height:45px;
+    font-size:32px;
+    font-family:Ubuntu-Medium;
+    color:rgba(76,81,85,1);
+}
+.originBlock .case .secTitle{
+    font-size:18px;
+    font-family:Ubuntu-Medium;
+    color:rgba(76,81,85,1);
+    line-height:21px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+.originBlock .case p{
+    font-size:16px;
+    line-height:28px;
+    font-family:PingFangSC-Regular;
+    color:rgba(140,140,140,1);
+    margin: 20px auto 40px;
+}
+.originBlock .case .list{
+    padding-left: 100px;
+}
+.originBlock .case .list .item{
+    position: relative;
+    padding-top: 64px;
+}
+.originBlock .case .list .name{
+    height:28px;
+    font-size:20px;
+    font-family:Ubuntu;
+    color:rgba(76,81,85,1);
+    line-height:24px;
+}
+.originBlock .case .list .name:before{
+    position: absolute;
+    left: -100px;
+    content: '';
+    width: 28px;
+    height: 28px;
+    background: url("../images/Group 6@2x.png");
+}
+.originBlock .case .item:before{
+    position: absolute;
+    left: -86px;
+    content: '';
+    width: 1px;
+    height: 100%;
+    background: #ededed;
+}
+.originBlock .case .item:last-child:before{
+    position: absolute;
+    left: -86px;
+    content: '';
+    width: 1px;
+    height: 1px;
+    background: #9d9d9d;
+}
+.originBlock .case .list .info{
+    font-size:16px;
+    font-family:Ubuntu;
+    color:rgba(140,140,140,1);
+    line-height:28px;
+    margin: 20px 0 15px;
+}
+
+
+.news {
+    padding-top: 64px;
+    padding-bottom: 50px;
+}
+.news .news-list li {
+    padding: 50px 0 40px 0;
+    border-bottom: 1px solid #EDEDED;
+}
+.news .news-list li h5 {
+    font-size: 24px;
+    font-family: PingFangSC-Medium;
+    color: #4c5155;
+    line-height: 33px;
+    margin: 0 0 20px;
+    font-weight: 500;
+}
+.news .news-list li h6 {
+    font-size: 16px;
+    font-family: Ubuntu;
+    color: #8c8c8c;
+    line-height: 18px;
+    margin: 0 0 15px 0;
+    font-weight: 500;
+}
+.news .news-list li p {
+    font-size: 16px;
+    font-family: Ubuntu;
+    color: #4c5155;
+    line-height: 28px;
+    margin: 0 0 13px 0;
+}
+.news .news-list li a {
+    font-size: 16px;
+    font-family: PingFangSC-Regular;
+    color: #3291ff;
+    line-height: 22px;
+}
+.news .pagination-box {
+    width: 970px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+.news .pagination-box .pagination {
+    margin: 0 0 50px 0;
+}
+.news-detail {
+    margin-bottom: 80px;
+    margin-top: 80px;
+}
+.news-detail h5 {
+    text-align: center;
+    font-size: 24px;
+    font-family: PingFangSC-Medium;
+    color: #4c5155;
+    line-height: 33px;
+    margin: 0 0 20px;
+    font-weight: 500;
+}
+.news-detail h6 {
+    font-size: 16px;
+    font-family: Ubuntu;
+    color: #8c8c8c;
+    line-height: 18px;
+    margin: 0 0 30px 0;
+    font-weight: 500;
+    text-align: right;
+}
+.news-detail .rich-text {
+    font-size: 16px;
+    line-height: 24px;
+}
+.news-detail .rich-text img {
+    max-width: 100%;
+}
+
+
+/*联系我们*/
+.contractUs{
+    padding-top: 64px;
+    padding-bottom: 200px;
+}
+.contractUs .title{
+    margin-bottom: 50px;
+    text-align: center;
+}
+.title h3{
+    height:48px;
+    line-height:48px;
+    font-size:34px;
+    font-family:PingFangSC-Regular;
+    color:rgba(76,81,85,1);
+    margin: 0 auto;
+    font-weight: normal;
+}
+.title h3:before{
+    vertical-align: 20%;
+    display: inline-block;
+    content: '';
+    width:100px;
+    height:1px;
+    margin-right: 20px;
+    background:rgba(216,216,216,1);
+}
+.title h3:after{
+    vertical-align: 20%;
+    display: inline-block;
+    content: '';
+    width:100px;
+    height:1px;
+    margin-left: 20px;
+    background:rgba(216,216,216,1);
+}
+.title .sec-title{
+    height:25px;
+    line-height:26px;
+    font-size:22px;
+    font-family:Ubuntu;
+    color:rgba(197,199,203,1);
+    margin: 10px 0 30px;
+}
+
+.contractUs .list{
+    overflow: hidden;
+}
+.contractUs .list .item{
+    position: relative;
+    min-height: 200px;
+    padding:35px 20px 20px 20px;
+    text-align: center;
+}
+.contractUs .item span{
+    display: inline-block;
+    height:52px;
+    font-size:20px;
+    font-family:PingFangSC-Regular;
+    color:rgba(76,81,85,1);
+    line-height:52px;
+    margin-left: 19px;
+}
+.contractUs .item p{
+    font-size:16px;
+    font-family:Ubuntu;
+    color:rgba(50,145,255,1);
+    line-height:24px;
+    margin-top: 19px;
+}
+
+/*常见问题*/
+.qa{
+    padding: 64px 15px 169px 15px;
+}
+.qa .title{
+    margin-bottom: 50px;
+    text-align: center;
+}
+.title h3{
+    height:48px;
+    line-height:48px;
+    font-size:34px;
+    font-family:PingFangSC-Regular;
+    color:rgba(76,81,85,1);
+    margin: 0 auto;
+    font-weight: normal;
+}
+.title h3:before{
+    vertical-align: 20%;
+    display: inline-block;
+    content: '';
+    width:100px;
+    height:1px;
+    margin-right: 20px;
+    background:rgba(216,216,216,1);
+}
+.title h3:after{
+    vertical-align: 20%;
+    display: inline-block;
+    content: '';
+    width:100px;
+    height:1px;
+    margin-left: 20px;
+    background:rgba(216,216,216,1);
+}
+.title .sec-title{
+    height:25px;
+    line-height:26px;
+    font-size:22px;
+    font-family:Ubuntu;
+    color:rgba(197,199,203,1);
+    margin: 10px 0 30px;
+}
+
+.qa .item{
+    padding: 30px 0 24px 48px;
+    border-bottom: 1px solid rgb(237,237,237);
+}
+.qa .item .question{
+    height:28px;
+    line-height:28px;
+    font-size:20px;
+    font-family:PingFangSC-Regular;
+    color:rgba(76,81,85,1);
+}
+.qa .item .question:before{
+    display: inline-block;
+    content: 'Q';
+    width: 28px;
+    height:28px;
+    margin-left: -48px;
+    margin-right: 20px;
+    line-height:28px;
+    font-size:16px;
+    font-family:PingFangSC-Regular;
+    color:#fff;
+    background-color: #3291ff;
+    border-radius: 50%;
+    text-align: center;
+}
+.qa .item .answer{
+    font-size:16px;
+    font-family:Ubuntu;
+    color:rgba(140,140,140,1);
+    line-height:28px;
+    margin-top: 20px;
+}
+
+.tabs{
+    border-bottom: 1px solid rgb(237,237,237);;
+    overflow: hidden;
+    text-align: center;
+    padding-bottom: 50px;
+}
+.text{
+    display: block;
+    height:28px;
+    font-size:20px;
+    font-family:PingFangSC-Regular;
+    color:rgba(197,199,203,1);
+    line-height:28px;
+    text-align: center;
+}
+.active{
+    color:rgba(76,81,85,1);
 }
