--- a/css/style.css
+++ b/css/style.css
@@ -175,20 +175,9 @@ a:hover {
     box-sizing: border-box;
 }
 .head-top{
-    padding-top: 50px;
+    padding-top: 60px;
 }
 /*控制banner图小按钮样式设置*/
-.carousel-indicators {
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    z-index: 15;
-    padding-left: 0;
-    margin-left: -585px;
-    text-align: right;
-    list-style: none;
-    /*background-color: red;*/
-}
 .carousel-indicators li {
     display: inline-block;
     width: 24px;
@@ -210,53 +199,41 @@ a:hover {
 }
 
 /*控制每张banner图描述内容的样式*/
-.alignLeft .carousel-caption{
+.carousel-caption{
     text-align: left;
-}
-.alignLeft .carousel-caption p{
-    height:30px;
-    line-height:30px;
-    font-size:22px;
-    font-family:PingFangSC-Regular;
-    color:rgba(255,255,255,1);
-}
-
-.carousel-caption {
-    position: absolute;
-    width: 1170px;
-    top: 220px;
-    left: 50%;
-    margin-left: -585px;
-    z-index: 10;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    text-shadow: none;
+    left: 30px;
+    right: 30px;
+    max-width: 1120px;
+    margin: auto;
+    bottom: 40px;
 }
 .carousel-caption h1{
-    height:75px;
     line-height:75px;
     font-size:54px;
     font-family:PingFangSC-Medium;
     color:rgba(255,255,255,1);
     margin-top: 0px;
-    margin-bottom: 40px;
+    margin-bottom: 36px;
+    text-shadow: none;
 }
 .carousel-caption img{
-    margin-bottom: 50px;
+    margin-bottom: 46px;
 }
 .carousel-caption p{
-    margin: 0 auto 90px;
-    height:30px;
+    margin: 0 auto 80px;
     line-height:24px;
     font-size:20px;
     font-family:Ubuntu;
-    color:rgba(140,140,140,1);
+    color:#fff;
+    text-shadow: none;
+}
+.carousel-caption a{
+    text-shadow: none;
 }
 
 .btn-custom{
     display: inline-block;
     width:186px;
-    height:56px;
     line-height: 56px;
     color: #fff;
     background:rgba(50,145,255,1);
@@ -457,12 +434,11 @@ a:hover {
 
 #carousel-example-generic .carousel-inner{
     max-width: 1920px;
-    width: 100%;
     height: 680px;
     margin: 0 auto;
 }
 #carousel-example-generic .carousel-inner .item{
-    width: 100%;
+    width: 1920px;
     height: 680px;
     position: absolute;
     left: 50%;
@@ -1251,6 +1227,12 @@ body{
     overflow: hidden;
     text-align: center;
     padding-bottom: 50px;
+}
+.tabs .img{
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    margin: 45px auto;
 }
 .text{
     display: block;
