--- a/less/media.less
+++ b/less/media.less
@@ -1,5 +1,11 @@
 //小于500px
 @media all and (max-width: 500px) {
+  .title h3:before{
+    display: none;
+  }
+  .title h3:after{
+    display: none;
+  }
   .carousel-caption{
     display: none;
   }
@@ -8,6 +14,9 @@
   }
   .slide-3d .item-list{
     width: 280px;
+  }
+  .slide-3d .desc{
+    bottom: -140px;
   }
   .slide-3d .item-list li{
     width: 140px;
@@ -88,6 +97,9 @@
   }
   .originBlock .case .list .name:before{
     left: -43px;
+  }
+  .footer .contact .right p{
+    justify-content: center;
   }
 }
 @media all and (min-width: 768px){
